@@ -11,7 +11,7 @@
 #                                     888
 #                                     888
 
-cmake_minimum_required (VERSION 3.15)
+cmake_minimum_required (VERSION 3.15...4.0)
 
 project (libbson
    LANGUAGES C
